fix contrast

--- a/components/Tag/Tag.module.css
+++ b/components/Tag/Tag.module.css
@@ -33,7 +33,7 @@
 
 .grey {
     color: var(--white);
-    background: #b3c0d9;
+    background: #51648c;
 
     font-weight: bold;
 }
