--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,13 +22,13 @@ a {
 	--black: #3B434E;
 	--gray-light: #EBEBEB; 
 	--gray: #A4A4A4;
-	--gray-dark: #787D85; 
+	--gray-dark: #6c7077; 
 	--white: white;
-	--primary: #7653FC;
+	--primary: #7351f5;
 	--primary-hover: #481bfd;
 	--red-light: #fea291;
 	--red: #FC836D;
-	--green: #1DC37E;
+	--green: #007b48;
 	--green-light: #c8f8e4;
 	--font-family: "Noto Sans KR", sans-serif;
 }
